--- a/Laravel_API/.env
+++ b/Laravel_API/.env
@@ -35,10 +35,10 @@ REACT_APP_BACKEND_URL=http://127.0.0.1:8000
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=null@gmail.com
-MAIL_PASSWORD=null
+MAIL_USERNAME=99tjjh10916@gmail.com
+MAIL_PASSWORD=niqwuysunkjhikgu
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="null@gmail.com"
+MAIL_FROM_ADDRESS="99tjjh10916@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
