--- a/React-vite/package.json
+++ b/React-vite/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-router-dom": "^6.10.0",
     "swiper": "^9.2.4"
   },
