--- a/Laravel_API/.env
+++ b/Laravel_API/.env
@@ -35,10 +35,11 @@ REACT_APP_BACKEND_URL=http://127.0.0.1:8000
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=99tjjh10916@gmail.com
-MAIL_PASSWORD=niqwuysunkjhikgu
+# 請輸入自己的信箱跟應用程式密碼
+MAIL_USERNAME=@gmail.com
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="99tjjh10916@gmail.com"
+MAIL_FROM_ADDRESS="@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
